<resources>
    <string name="app_name">LoginAndShowData</string>
    <string name="login_text">Login</string>
    <string name="name">Nama</string>
    <string name="email">Email</string>
    <string name="jurusan">Jurusan</string>
    <string name="semester">Semester</string>
    <string name="empty_name">Nama harus diisi!</string>
    <string name="empty_email">Email harus diisi!</string>
    <string name="empty_jurusan">Jurusan harus diisi!</string>
    <string name="empty_semester">Semester harus diisi!</string>
    <string name="email_wrong">Masukan email dengan format yang benar!</string>
    <string name="semester_wrong">Masukan semester antara 1 sampai dengan 14</string>
    <string name="invalid_input">Invalid input</string>
    <string name="show_data">: %s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>