<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_avatar"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/baseline_account_circle_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="64dp"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_avatar">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/email"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/tv_name"
                app:layout_constraintTop_toBottomOf="@id/tv_name" />

            <TextView
                android:id="@+id/tv_jurusan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/jurusan"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/tv_email"
                app:layout_constraintTop_toBottomOf="@id/tv_email" />

            <TextView
                android:id="@+id/tv_semester"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16sp"
                android:text="@string/semester"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/tv_jurusan"
                app:layout_constraintTop_toBottomOf="@id/tv_jurusan" />

            <TextView
                android:id="@+id/tv_data_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                app:layout_constraintBottom_toBottomOf="@id/tv_name"
                app:layout_constraintStart_toEndOf="@id/tv_semester"
                app:layout_constraintTop_toTopOf="@id/tv_name"
                tools:text="@string/name" />

            <TextView
                android:id="@+id/tv_data_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/tv_email"

                app:layout_constraintStart_toStartOf="@id/tv_data_name"
                app:layout_constraintTop_toTopOf="@id/tv_email"
                tools:text="@string/email" />

            <TextView
                android:id="@+id/tv_data_jurusan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/tv_jurusan"
                app:layout_constraintStart_toStartOf="@id/tv_data_email"
                app:layout_constraintTop_toTopOf="@id/tv_jurusan"
                tools:text="@string/jurusan" />

            <TextView
                android:id="@+id/tv_data_semester"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/tv_semester"
                app:layout_constraintStart_toStartOf="@id/tv_data_jurusan"
                app:layout_constraintTop_toTopOf="@id/tv_semester"
                tools:text="@string/semester" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>